@@ -1,5 +1,12 @@
 2007-08-02  Corinna Vinschen  <corinna@vinschen.de>
 
+	* syscalls.cc (rename): Move and add text to comment about testing
+	oldpath and newpath referring to the same file.  Test if oldpath
+	has more than one hardlink before opening oldpath (idea by Eric Blake).
+	Reorder test so that file id is tested before volume serial number.  
+
+2007-08-02  Corinna Vinschen  <corinna@vinschen.de>
+
 	* path.h (struct fs_info): Drop root_len and name_hash members.
 	(fsinfo::length): Remove.
 	(path_conv::rootdir): Remove.
